Nearly reduce to 6 pages

--- a/papers/2012-ftfjp/refs.bib
+++ b/papers/2012-ftfjp/refs.bib
@@ -11,8 +11,8 @@
  url = {http://doi.acm.org/10.1145/1999732.1999740},
  doi = {http://doi.acm.org/10.1145/1999732.1999740},
  acmid = {1999740},
- publisher = {ACM},
- address = {New York, NY, USA},
+ OMITpublisher = {ACM},
+ OMITaddress = {New York, NY, USA},
  keywords = {mobile phone applications, privacy, security},
 } 
 
@@ -22,7 +22,7 @@
  journal = {SIGCOMM Comput. Commun. Rev.},
  volume = {37},
  issue = {5},
- month = {October},
+ month = Oct,
  year = {2007},
  issn = {0146-4833},
  pages = {81--94},
@@ -30,8 +30,8 @@
  url = {http://doi.acm.org/10.1145/1290168.1290180},
  doi = {http://doi.acm.org/10.1145/1290168.1290180},
  acmid = {1290180},
- publisher = {ACM},
- address = {New York, NY, USA},
+ OMITpublisher = {ACM},
+ OMITaddress = {New York, NY, USA},
 } 
 
 @inproceedings{rocketfuel,
@@ -48,8 +48,8 @@ technologies, architectures, and protocols for computer communications},
  url = {http://doi.acm.org/10.1145/633025.633039},
  doi = {http://doi.acm.org/10.1145/633025.633039},
  acmid = {633039},
- publisher = {ACM},
- address = {New York, NY, USA},
+ OMITpublisher = {ACM},
+ OMITaddress = {New York, NY, USA},
 } 
 
 @inproceedings{ispmix,
@@ -68,8 +68,8 @@ Enhancing Technologies},
  url = {http://dx.doi.org/10.1007/978-3-642-03168-7_9},
  doi = {http://dx.doi.org/10.1007/978-3-642-03168-7_9},
  acmid = {1614517},
- publisher = {Springer-Verlag},
- address = {Berlin, Heidelberg},
+ OMITpublisher = {Springer-Verlag},
+ OMITaddress = {Berlin, Heidelberg},
 } 
 
 @InProceedings{passport,
@@ -93,7 +93,7 @@ Tom},
  journal = {IEEE/ACM Trans. Netw.},
  volume = {9},
  issue = {3},
- month = {June},
+ month = Jun,
  year = {2001},
  issn = {1063-6692},
  pages = {226--237},
@@ -101,8 +101,8 @@ Tom},
  url = {http://dx.doi.org/10.1109/90.929847},
  doi = {http://dx.doi.org/10.1109/90.929847},
  acmid = {383578},
- publisher = {IEEE Press},
- address = {Piscataway, NJ, USA},
+ OMITpublisher = {IEEE Press},
+ OMITaddress = {Piscataway, NJ, USA},
  keywords = {computer network management, computer network security, network 
 servers, stochastic approximation, wide-area networks},
 } 
@@ -144,8 +144,8 @@ Languages and Analysis for Security},
  url = {http://doi.acm.org/10.1145/1554339.1554349},
  doi = {http://doi.acm.org/10.1145/1554339.1554349},
  acmid = {1554349},
- publisher = {ACM},
- address = {New York, NY, USA},
+ OMITpublisher = {ACM},
+ OMITaddress = {New York, NY, USA},
  keywords = {channel capacity, model counting, quantitative information 
 flow},
 } 
@@ -166,8 +166,8 @@ testing and analysis},
  url = {http://doi.acm.org/10.1145/1831708.1831711},
  doi = {http://doi.acm.org/10.1145/1831708.1831711},
  acmid = {1831711},
- publisher = {ACM},
- address = {New York, NY, USA},
+ OMITpublisher = {ACM},
+ OMITaddress = {New York, NY, USA},
  keywords = {control dependence, data dependence, dynamic information flow, 
 strict control dependence, taint analysis},
 } 
@@ -203,8 +203,8 @@ design and implementation},
  numpages = {6},
  url = {http://dl.acm.org/citation.cfm?id=1924943.1924971},
  acmid = {1924971},
- publisher = {USENIX Association},
- address = {Berkeley, CA, USA},
+ OMITpublisher = {USENIX Association},
+ OMITaddress = {Berkeley, CA, USA},
 } 
 
 @article{enckunderstanding,
@@ -213,7 +213,7 @@ design and implementation},
  journal = {IEEE Security and Privacy},
  volume = {7},
  issue = {1},
- month = {January},
+ month = Jan,
  year = {2009},
  issn = {1540-7993},
  pages = {50--57},
@@ -221,8 +221,8 @@ design and implementation},
  url = {http://dx.doi.org/10.1109/MSP.2009.26},
  doi = {http://dx.doi.org/10.1109/MSP.2009.26},
  acmid = {1512324},
- publisher = {IEEE Educational Activities Department},
- address = {Piscataway, NJ, USA},
+ OMITpublisher = {IEEE Educational Activities Department},
+ OMITaddress = {Piscataway, NJ, USA},
  keywords = {Android, mobile phones, Smartphones, security},
 } 
 
@@ -240,8 +240,8 @@ Conference},
  url = {http://dx.doi.org/10.1109/ACSAC.2009.39},
  doi = {http://dx.doi.org/10.1109/ACSAC.2009.39},
  acmid = {1723245},
- publisher = {IEEE Computer Society},
- address = {Washington, DC, USA},
+ OMITpublisher = {IEEE Computer Society},
+ OMITaddress = {Washington, DC, USA},
  keywords = {mobile phone security, Android, application interactions, 
 mediation},
 } 
@@ -261,8 +261,8 @@ systems, applications, and services},
  url = {http://doi.acm.org/10.1145/1999995.2000018},
  doi = {http://doi.acm.org/10.1145/1999995.2000018},
  acmid = {2000018},
- publisher = {ACM},
- address = {New York, NY, USA},
+ OMITpublisher = {ACM},
+ OMITaddress = {New York, NY, USA},
  keywords = {Android, intents, message passing, mobile phone security},
 } 
 
@@ -333,7 +333,7 @@ Wetherall",
   journal={Programming Languages and Systems},
   pages={139--160},
   year={2005},
-  publisher={Springer-Verlag}
+  OMITpublisher={Springer-Verlag}
 }
 
 @InProceedings{pios,
@@ -343,7 +343,7 @@ Wetherall",
 Symposium (NDSS)},
   year = 	 2011,
   address = 	 {San Diego, CA},
-  month = 	 {February}}
+  month = 	 Feb}
 
 @inproceedings{pointless,
  author = {Slowinska, Asia and Bos, Herbert},
@@ -360,8 +360,8 @@ systems},
  url = {http://doi.acm.org/10.1145/1519065.1519073},
  doi = {http://doi.acm.org/10.1145/1519065.1519073},
  acmid = {1519073},
- publisher = {ACM},
- address = {New York, NY, USA},
+ OMITpublisher = {ACM},
+ OMITaddress = {New York, NY, USA},
  keywords = {dynamic taint analysis, pointer tainting},
 } 
 
@@ -381,8 +381,8 @@ communications security},
  url = {http://doi.acm.org/10.1145/1315245.1315261},
  doi = {http://doi.acm.org/10.1145/1315245.1315261},
  acmid = {1315261},
- publisher = {ACM},
- address = {New York, NY, USA},
+ OMITpublisher = {ACM},
+ OMITaddress = {New York, NY, USA},
  keywords = {dynamic taint analysis, malware analysis, malware detection, 
 spyware},
 } 
@@ -404,8 +404,8 @@ on Microarchitecture},
  url = {http://dx.doi.org/10.1109/MICRO.2004.31},
  doi = {http://dx.doi.org/10.1109/MICRO.2004.31},
  acmid = {1038947},
- publisher = {IEEE Computer Society},
- address = {Washington, DC, USA},
+ OMITpublisher = {IEEE Computer Society},
+ OMITaddress = {Washington, DC, USA},
 } 
 
 @article{tainteraser,
@@ -417,7 +417,7 @@ level taint tracking},
  issue_date = {January 2011},
  volume = {45},
  issue = {1},
- month = {February},
+ month = Feb,
  year = {2011},
  issn = {0163-5980},
  pages = {142--154},
@@ -425,8 +425,8 @@ level taint tracking},
  url = {http://doi.acm.org/10.1145/1945023.1945039},
  doi = {http://doi.acm.org/10.1145/1945023.1945039},
  acmid = {1945039},
- publisher = {ACM},
- address = {New York, NY, USA},
+ OMITpublisher = {ACM},
+ OMITaddress = {New York, NY, USA},
  keywords = {dynamic information flow tracking, privacy, sensitive data 
 protection},
 } 
@@ -462,10 +462,10 @@ protection},
                   and M. Ulbrich and B. Weiss},
  title = {The 1st {V}erified {S}oftware {C}ompetition: Experience Report},
  booktitle = {Formal Methods (FM)},
- editor = {M. Butler and W. Schulte},
+ OMITeditor = {M. Butler and W. Schulte},
  year = {2011},
  series = {Lecture Notes in Computer Science},
- publisher = {Springer-Verlag}
+ OMITpublisher = {Springer-Verlag}
 }
 
 @article{Hoare2003,
@@ -474,7 +474,7 @@ protection},
  journal = {J. ACM},
  volume = {50},
  issue = {1},
- month = {January},
+ month = Jan,
  year = {2003},
  issn = {0004-5411},
  pages = {63--69},
@@ -482,21 +482,21 @@ protection},
  url = {http://doi.acm.org/10.1145/602382.602403},
  doi = {http://doi.acm.org/10.1145/602382.602403},
  acmid = {602403},
- publisher = {ACM},
- address = {New York, NY, USA},
+ OMITpublisher = {ACM},
+ OMITaddress = {New York, NY, USA},
 } 
 
 @article{BarnettEA10,
  author = {M. Barnett and M. F\"ahndrich and K. R. M. Leino and
                   P. M\"uller and W. Schulte and H. Venter},
  title = {Specification and Verification: The {Spec\#} Experience},
- journal = {Communications of the ACM},
- month = {June},
+ journal = CACM,
+ month = Jun,
  year = {2011},
  volume = {54},
  number = {6},
  pages = {81-91},
- publisher = {ACM}
+ OMITpublisher = {ACM}
 }
 
 @inproceedings{LeinoMueller09a,
@@ -505,10 +505,10 @@ protection},
                   Bug-Free Programs},
  booktitle = {Advanced Lectures on Software Engineering---LASER Summer
                   School 2007/2008},
- editor = {P. M\"uller},
+ OMITeditor = {P. M\"uller},
  year = {2010},
  series = {Lecture Notes in Computer Science},
- publisher = {Springer-Verlag},
+ OMITpublisher = {Springer-Verlag},
  volume = {6029},
  pages = {91-139}
 }
@@ -518,8 +518,8 @@ protection},
    title = {A Type System Equivalent to a Model Checker},
    booktitle = {European Symposium On Programming (ESOP)},
    series = {Lecture Notes in Computer Science},
-   editor = {Sagiv, Mooly},
-   publisher = {Springer-Verlag},
+   OMITeditor = {Sagiv, Mooly},
+   OMITpublisher = {Springer-Verlag},
    isbn = {978-3-540-25435-5},
    keyword = {Computer Science},
    pages = {374--388},
@@ -535,28 +535,28 @@ protection},
                   static analysis of programs by construction or
                   approximation of fixpoints},
    pages =     {238--252},
-   booktitle = {Principles of Programming Languages (POPL)},
-   publisher = {ACM},
+   booktitle = POPL77,
+   OMITpublisher = {ACM},
    year =      1977,
 }
 
 @InProceedings{Cousot1997,
   author = 	 {Cousot, P.},
   title = 	 {Types as abstract interpretations},
-  booktitle =    {Principles of Programming Languages (POPL)},
+  booktitle =    POPL97,
   pages = 	 {316--331},
   year = 	 {1997},
-  note = 	 {\url{http://www.di.ens.fr/~cousot/publications.www/Cousot-
+  OMITnote = 	 {\url{http://www.di.ens.fr/~cousot/publications.www/Cousot-
 POPL97-p316-331-1997.pdf}},
 }
 
 @InProceedings{CousotCousot2000,
   author = 	 {Cousot, P. and Cousot, R.},
   title = 	 {Temporal abstract interpretation},
-  booktitle =    {Principles of Programming Languages (POPL)},
+  booktitle =    POPL2000,
   pages = 	 {12--25},
   year = 	 {2000},
-  note = 	 
+  OMITnote = 	 
 {\url{http://www.di.ens.fr/~cousot/publications.www/CousotCousot-POPL-00-ACM-
 p12--25-2000.pdf}},
 }
@@ -573,13 +573,13 @@ P. Cousot.
    title =     {The Verification Grand Challenge and Abstract 
                 Interpretation},
    booktitle = {Verified Software: Theories, Tools, Experiments},
-   editor =    {B.\ Meyer and J.\ Woodcock},
+   OMITeditor =    {B.\ Meyer and J.\ Woodcock},
    year =      2007,
-   series =    {Lecture Notes in Computer Science},
+   OMITseries =    {Lecture Notes in Computer Science},
    month =     dec,
    volume =    {4171},
    pages =     {227--240},
-   publisher = {Springer-Verlag},
+   OMITpublisher = {Springer-Verlag},
 }
 
 @article{Klein_EHACDEEKNSTW_10,
@@ -589,15 +589,15 @@ P. Cousot.
                   Engelhardt and Rafal Kolanski and Michael Norrish
                   and Thomas Sewell and Harvey Tuch and Simon
                   Winwood},
-    journal          = {Communications of the ACM},
+    journal          = CACM,
     title            = {{seL4}: Formal Verification of an Operating System 
 Kernel},
     number           = {6},
-    month            = {Jun},
+    month            = Jun,
     volume           = {53},
     year             = {2010},
     pages            = {107--115},
-    publisher        = {ACM},
+    OMITpublisher        = {ACM},
 }
 
 @InProceedings{CameronDietl09,
@@ -620,12 +620,12 @@ Francalanza and P. M\"{u}ller and A. J. Summers},
   pages =        {72--112},
   month =        dec,
   year =         {2008},
-  editor =       {F. S. de Boer and M. M. Bonsangue and S. Graf and W.-P. de 
+  OMITeditor =       {F. S. de Boer and M. M. Bonsangue and S. Graf and W.-P. de 
 Roever},
   volume =       {5382},
   OPTnumber =    {},
   series =       {Lecture Notes in Computer Science},
-  publisher =    {Springer-Verlag},
+  OMITpublisher =    {Springer-Verlag},
   doi =          {10.1007/978-3-540-92188-2_4},
 }
 
@@ -653,10 +653,10 @@ Roever},
                   (ECOOP)},
   month =        jul,
   year =         2007,
-  editor =       {E. Ernst},
+  OMITeditor =       {E. Ernst},
   series =       {Lecture Notes in Computer Science},
   volume =       4609,
-  publisher =    {Springer-Verlag},
+  OMITpublisher =    {Springer-Verlag},
   pages =        {28--53},
   doi =          {10.1007/978-3-540-73589-2_3},
 }
@@ -686,7 +686,7 @@ Roever},
   month =        mar,
   series =       {Lecture Notes in Computer Science},
   volume =       3362,
-  publisher =    {Springer-Verlag},
+  OMITpublisher =    {Springer-Verlag},
   isbn =         {978-3-540-24287-1},
 }
 
@@ -705,7 +705,7 @@ Roever},
  author = {M{\"u}ller, P.},
  title = {Modular Specification and Verification of Object-Oriented 
 Programs},
- publisher = {Springer-Verlag},
+ OMITpublisher = {Springer-Verlag},
  series = {Lecture Notes in Computer Science},
  volume = {2262},
  year = {2002},
@@ -716,7 +716,7 @@ Programs},
   author = 	 {A. Aiken and S. Bugrara and I. Dillig and T. Dillig
                   and P. Hawkins and B. Hackett},
   title = 	 {An Overview of the {Saturn} Project},
-  booktitle =    {Program Analysis for Software Tools and Engineering (PASTE)},
+  booktitle =    PASTE2007,
   pages = 	 {43--48},
   year = 	 {2007},
 }
@@ -725,27 +725,27 @@ Programs},
 @article{Leroy2009,
   author = 	 {Xavier Leroy},
   title = 	 {Formal verification of a realistic compiler},
-  journal =      {Communications of the ACM},
-  month = 	 {July},
+  journal =      CACM,
+  month = 	 Jul,
   year = 	 {2009},
   number = 	 {7},
   volume = 	 {52},
-  publisher =    {ACM}
+  OMITpublisher =    {ACM}
 }
 
 @article{BallLR2011,
  author = {Ball, Thomas and Levin, Vladimir and Rajamani, Sriram K.},
  title = {A decade of software model checking with {SLAM}},
- journal = {Commununications of the  ACM},
+ journal = CACM,
  volume = {54},
  issue = {7},
- month = {July},
+ month = Jul,
  year = {2011},
  issn = {0001-0782},
  pages = {68--76},
  numpages = {9},
  url = {http://doi.acm.org/10.1145/1965724.1965743},
- publisher = {ACM},
+ OMITpublisher = {ACM},
 } 
 
 @inproceedings{BallBKL2010,
@@ -758,7 +758,7 @@ Programs},
  pages = {35--42},
  numpages = {8},
  url = {http://dl.acm.org/citation.cfm?id=1998496.1998508},
- publisher = {FMCAD Inc},
+ OMITpublisher = {FMCAD Inc},
 } 
 
 @Misc{Boogie,
@@ -805,20 +805,20 @@ Programs},
  journal = {Information and Computation},
  volume = {76},
  issue = {2-3},
- month = {February},
+ month = Feb,
  year = {1988},
  issn = {0890-5401},
  pages = {95--120},
  numpages = {26},
  url = {http://dl.acm.org/citation.cfm?id=47724.47725},
  doi = {10.1016/0890-5401(88)90005-3},
- publisher = {Academic Press, Inc.},
+ OMITpublisher = {Academic Press, Inc.},
 } 
 
 @Book{CurryHoward2006,
   author = 	 {Morten Heine S\o{}rensen and Pawel Urzyczyn},
   title = 	 {Lectures on the Curry-Howard Isomorphism},
-  publisher = 	 {Elsevier Science},
+  OMITpublisher = 	 {Elsevier Science},
   year = 	 {2006},
   series = 	 {Studies in Logic and the Foundations of Mathematics},
 }
@@ -857,7 +857,7 @@ Programs},
   booktitle =    {LISP and functional programming (LFP)},
   year =         {1990},
   pages =        {218--226},
-  NOpublisher =  ACM,
+  OMITNOpublisher =  ACM,
 } 
 
 @InProceedings{ChoiEA1999,
@@ -872,7 +872,7 @@ Programs},
   author =       {T. Nipkow and L. Paulson and M. Wenzel},
   title =        {Isabelle/{HOL} --- A Proof Assistant for
                   Higher-Order Logic},
-  publisher =    {Springer-Verlag},
+  OMITpublisher =    {Springer-Verlag},
   series =       {Lecture Notes in Computer Science},
   volume =       2283,
   year =         2002,
@@ -880,10 +880,10 @@ Programs},
 }
 
 @Book{Coq2004,
-  author = 	 {Bertot, Yves and Cast\'{e}éran, Pierre},
+  author = 	 {Bertot, Yves and Cast\'{e}ran, Pierre},
   title = 	 {Interactive Theorem Proving and Program Development;
 {Coq'Art}: The Calculus of Inductive Constructions},
-  publisher = 	 {Springer-Verlag},
+  OMITpublisher = 	 {Springer-Verlag},
   year = 	 {2004},
   series = 	 {Texts in Theoretical Computer Science. An EATCS Series},
 }
