--- a/papers/2012-ftfjp/refs.bib
+++ b/papers/2012-ftfjp/refs.bib
@@ -464,7 +464,7 @@ protection},
  booktitle = {Formal Methods (FM)},
  OMITeditor = {M. Butler and W. Schulte},
  year = {2011},
- series = {Lecture Notes in Computer Science},
+ OMITseries = {Lecture Notes in Computer Science},
  OMITpublisher = {Springer-Verlag}
 }
 
@@ -507,23 +507,23 @@ protection},
                   School 2007/2008},
  OMITeditor = {P. M\"uller},
  year = {2010},
- series = {Lecture Notes in Computer Science},
+ OMITseries = {Lecture Notes in Computer Science},
  OMITpublisher = {Springer-Verlag},
- volume = {6029},
+ OMITvolume = {6029},
  pages = {91-139}
 }
 
 @incollection {NaikPalsberg2005,
    author = {Naik, Mayur and Palsberg, Jens},
    title = {A Type System Equivalent to a Model Checker},
-   booktitle = {European Symposium On Programming (ESOP)},
-   series = {Lecture Notes in Computer Science},
+   booktitle = ESOP2005,
+   OMITseries = {Lecture Notes in Computer Science},
    OMITeditor = {Sagiv, Mooly},
    OMITpublisher = {Springer-Verlag},
    isbn = {978-3-540-25435-5},
    keyword = {Computer Science},
    pages = {374--388},
-   volume = {3444},
+   OMITvolume = {3444},
    OPTurl = {http://dx.doi.org/10.1007/978-3-540-31987-0_26},
    OPTnote = {10.1007/978-3-540-31987-0_26},
    year = {2005}
@@ -577,7 +577,7 @@ P. Cousot.
    year =      2007,
    OMITseries =    {Lecture Notes in Computer Science},
    month =     dec,
-   volume =    {4171},
+   OMITvolume =    {4171},
    pages =     {227--240},
    OMITpublisher = {Springer-Verlag},
 }
@@ -624,7 +624,7 @@ Francalanza and P. M\"{u}ller and A. J. Summers},
 Roever},
   volume =       {5382},
   OPTnumber =    {},
-  series =       {Lecture Notes in Computer Science},
+  OMITseries =       {Lecture Notes in Computer Science},
   OMITpublisher =    {Springer-Verlag},
   doi =          {10.1007/978-3-540-92188-2_4},
 }
@@ -649,13 +649,12 @@ Roever},
 @InProceedings{DietlDrossopoulouMueller07b,
   author =       {Dietl, W. and Drossopoulou, S. and M\"{u}ller, P.},
   title =        {{Generic Universe Types}},
-  booktitle =    {European Conference on Object-Oriented Programming
-                  (ECOOP)},
+  booktitle =    ECOOP2007,
   month =        jul,
   year =         2007,
   OMITeditor =       {E. Ernst},
-  series =       {Lecture Notes in Computer Science},
-  volume =       4609,
+  OMITseries =       {Lecture Notes in Computer Science},
+  OMITvolume =       4609,
   OMITpublisher =    {Springer-Verlag},
   pages =        {28--53},
   doi =          {10.1007/978-3-540-73589-2_3},
@@ -684,8 +683,8 @@ Roever},
   pages =        {129--150},
   year =         2004,
   month =        mar,
-  series =       {Lecture Notes in Computer Science},
-  volume =       3362,
+  OMITseries =       {Lecture Notes in Computer Science},
+  OMITvolume =       3362,
   OMITpublisher =    {Springer-Verlag},
   isbn =         {978-3-540-24287-1},
 }
@@ -753,7 +752,8 @@ Programs},
                   Levin, Vladimir},
  title = {{SLAM2}: static driver verification with under 4\% false
                   alarms}, 
- booktitle = {Formal Methods in Computer-Aided Design (FMCAD)},
+ FULLbooktitle = {Formal Methods in Computer-Aided Design (FMCAD)},
+ booktitle = {FMCAD},
  year = {2010},
  pages = {35--42},
  numpages = {8},
@@ -883,7 +883,7 @@ Programs},
   author = 	 {Bertot, Yves and Cast\'{e}ran, Pierre},
   title = 	 {Interactive Theorem Proving and Program Development;
 {Coq'Art}: The Calculus of Inductive Constructions},
-  OMITpublisher = 	 {Springer-Verlag},
+  publisher = 	 {Springer-Verlag},
   year = 	 {2004},
-  series = 	 {Texts in Theoretical Computer Science. An EATCS Series},
+  OMITseries = 	 {Texts in Theoretical Computer Science. An EATCS Series},
 }
