Add PDF meta-data, fix line break, fix space between authors, and space between two images.

--- a/papers/2012-ftfjp/2012-pipejam.tex
+++ b/papers/2012-ftfjp/2012-pipejam.tex
@@ -1,6 +1,16 @@
 \documentclass[preprint]{sig-alternate}
 
 \usepackage{hyperref}
+\hypersetup {
+    pdfauthor={Werner Dietl, Stephanie Dietzel, Michael D. Ernst,
+      Nathaniel Mote, Brian Walker, Seth Cooper, Timothy Pavlik, Zoran
+      Popovi\'c},
+    pdftitle={Verification Games: Making Verification Fun},
+    pdfsubject={FTfJP 2012 submission},
+    breaklinks=true,
+    hypertexnames=false,
+}
+
 \usepackage{microtype}
 \usepackage{color}
 \usepackage{epsfig}
@@ -55,13 +65,13 @@
 
 \author{
 Werner Dietl
-\qquad
+\ \quad
 Stephanie Dietzel
-\qquad
+\ \quad
 Michael D. Ernst
-\qquad
+\ \quad
 Nathaniel Mote
-\qquad
+\ \quad
 Brian Walker\\
 %
 {\normalsize
@@ -170,7 +180,7 @@ playing a game.
 
 The availability of inexpensive formal verification could change the
 economics of software verification and validation, making
-formally-correct software more cost-effective and thus more
+formal\-ly-correct software more cost-effective and thus more
 widespread, and  leading to systems that are more reliable and
 robust.  
 These benefits would extend throughout the software
@@ -337,8 +347,8 @@ The remainder of this paper is structured as follows.
 \begin{figure*}
 \begin{center}
 \includegraphics[width=.49\textwidth]{images/allUI-world1}%
-\hfill%
-\includegraphics[width=.35\textwidth]{images/world-map}
+\hspace{10mm}
+\includegraphics[width=.35\textwidth]{images/world-map}%
 \end{center}
 
 \caption{
