--- a/papers/2012-ftfjp/2012-pipejam.tex
+++ b/papers/2012-ftfjp/2012-pipejam.tex
@@ -454,7 +454,7 @@ much easier experienced than textually described.)
   (An example is the two orange pipes in \figref{fig:game-detail}.)
   When the player changes the width of one of these pipes,
   then it also changes the width of all the other pipes of that color.
-  When the player changes the width of a give pipe, that change may solve
+  When the player changes the width of a given pipe, that change may solve
   one board on a level but unsolve a different, previously-solved board on
   the same level.  The player's challenge is to find a set of pipe widths
   that simultaneously solve the entire level.
