Add Stephanie's email address.

--- a/papers/2012-ftfjp/2012-pipejam.tex
+++ b/papers/2012-ftfjp/2012-pipejam.tex
@@ -77,7 +77,7 @@ Brian Walker\\
 {\normalsize
 Programming Languages \& Software Engineering Group,
 University of Washington}\\
-\url{{wmdietl,mernst,nmote,bdwalker}@cs.washington.edu}
+\url{{wmdietl,sdietzel,mernst,nmote,bdwalker}@cs.washington.edu}
 %
 \and
 %
