Mike's edits in sections 1-2

--- a/papers/2012-ftfjp/2012-pipejam.bib
+++ b/papers/2012-ftfjp/2012-pipejam.bib
@@ -7,8 +7,9 @@
 @inproceedings{cooper10challenge,
  author = {Cooper, Seth and Treuille, Adrien and Barbero, Janos and Leaver-Fay, Andrew and Tuite, Kathleen and Khatib, Firas and Snyder, Alex Cho and Beenen, Michael and Salesin, David and Baker, David and Popovi\'{c}, Zoran and {Foldit Players}},
  title = {The challenge of designing scientific discovery games},
- booktitle = {Foundations of Digital Games},
- series = {FDG '10},
+ OLDbooktitle = {Foundations of Digital Games},
+ booktitle = {FDG},
+ OMITseries = {FDG '10},
  year = {2010},
  isbn = {978-1-60558-937-4},
  OPTlocation = {Monterey, California},
@@ -17,15 +18,16 @@
  url = {http://doi.acm.org/10.1145/1822348.1822354},
  doi = {http://doi.acm.org/10.1145/1822348.1822354},
  acmid = {1822354},
- publisher = {ACM},
+ OMITpublisher = {ACM},
  OPTaddress = {New York, NY, USA},
 }
 
 @inproceedings{cooper11analysis,
  author = {Cooper, Seth and Khatib, Firas and Makedon, Ilya and Lu, Hao and Barbero, Janos and Fogarty, James and Popovi\'{c}, Zoran and {Foldit Players}},
  title = {Analysis of Social gameplay macros in the {Foldit} cookbook},
- booktitle = {Foundations of Digital Games},
- series = {FDG '11},
- year = {2011},
- publisher = {ACM},
+ OLDbooktitle = {Foundations of Digital Games},
+ booktitle = {FDG},
+ OMITseries = {FDG '11},
+ year = 2011,
+ OMITpublisher = {ACM},
 }
