--- a/papers/2012-ftfjp/2012-pipejam.tex
+++ b/papers/2012-ftfjp/2012-pipejam.tex
@@ -105,7 +105,7 @@ Center for Game Science, University of Washington}\\
 Program verification is the only way to be certain that a given
 piece of software is free of (certain types of) errors --- errors that
 could otherwise disrupt operations in the field.  To date, formal
-verification has been done manually, by specially-trained engineers.  Labor
+verification has been done by specially-trained engineers.  Labor
 costs have heretofore made formal verification too costly to apply beyond
 small, critical software components.
 
@@ -171,10 +171,8 @@ Our aim is to change the way that software is verified, to enable
 inexpensive formal verification.  Current approaches that rely on
 testing are incomplete.  Current approaches that rely on manual
 verification by skilled users are extremely expensive.  
-Current approaches are not capable of keeping up with the
-current and future rate of software production.
-\todo{Reviewer 2 didn't like the repetition of ``Current approaches''
-  and ``current''. Do we want to change this?}
+None of these approaches is capable of keeping up with the
+rate of software production.
 
 Our approach is to remap the problem into a more accessible
 form, and use an engaging game to develop a significantly larger
@@ -255,10 +253,11 @@ bug, or add an assertion/assumption indicating that the verification
 system should not issue a warning at this particular location.
 
 
-Even when game-developed experts cannot fully verify
-a program, the impact of this paradigm can be significant.  Even
+Even when players (who have become game experts over time) cannot fully
+verify a program,
 partial verification has great value: it permits the valuable time of
-highly-skilled engineers to be focused on the most important parts of
+highly-skilled engineers to be focused on the most important and
+difficult-to-verify parts of
 the program.
 
 \subsection{Types for program verification}
@@ -304,7 +303,7 @@ Framework~\cite{checker-framework-website},
 which has found hundreds of errors in millions of lines of
 code~\cite{PapiACPE2008,DietlDEMS2011}.  It can be easily adapted to new
 verification problems and comes
-with type-checkers that prevent errors due to null pointers;
+with type-checkers that prevent errors due to:  null pointers;
 initialization; map keys; equality tests and interning; incorrect
 mutation (side effects); concurrency and locking; fake enumerations;
 information flow (trust and security); aliasing; regular expression
@@ -321,8 +320,8 @@ proof of partial correctness.
 The constraints and relationships among
 game elements are representations of the constraints on program types and
 the relationships among program variables.
-By playing the game, the programmer is effectively choosing types for
-every variable in the program.
+By playing the game, the programmer is effectively choosing a type for
+each variable in the program.
 This is valuable because general type inference with precise error messages
 remains an unsolved problem that can benefit from crowdsourcing.
 
@@ -364,12 +363,12 @@ work and \secref{sec:conclusions} concludes.
   The left screenshot shows the player's view of the game.  In the
   upper right is the board that the player is currently working on
   (named ``Earth MountRock'').  The bottom portion of the screen shows
-  thumbnails of all the other boards in the current level, together
+  thumbnails of the other boards in the current level, together
   with a concise summary of which boards are solved and which are
   unsolved (the row of red and green rectangles).  The thumbnail at
   center left is for panning, which is not needed in this example.
   Above it are controls for adding a buzzsaw and for viewing an
-  animation; the current score; and a back button and the collapsed
+  animation.  Above those are the current score; a back button, the collapsed
   world map.
   \newline
   The right screenshot shows the world map in its expanded state.  The
@@ -402,27 +401,33 @@ pinch points.)  Likewise, some balls are large and cannot be adjusted;
 see Figures \ref{fig:game-detail} and~\ref{fig:game-buzzsaw} for
 examples of balls (atop gray pipes) that are fixed to be large.  The
 puzzle is solved when the player has chosen widths that are consistent
-with all the constraints, including both fixed sizes and which pipes
+with all the constraints.  The constraints include both fixed pipe sizes
+and which pipes
 flow into one another.
 
 The basic idea behind Pipe Jam is simple and lends itself to quick
 learning and enjoyable play.  We now explain some additional game
 mechanics that add interest and challenge.  (These game mechanics are
-much easier experienced than textually described.)
+much easier experienced than textually described.\todo{Reference video})
 
 \begin{description}
 
-\item[Boards and levels]
+\item[Boards]
   A Pipe Jam game is divided into boards, levels, and worlds.  A board is a
-  single network of pipes.  A level consists of a set of boards.  The level
-  is solved when all of the boards in it have been solved.  As explained
+  single network of pipes.  Examples appear in
+  Figures~\ref{fig:game-detail} and~\ref{fig:game-buzzsaw}.
+
+\item[Levels]
+  A level consists of a set of boards.  The left side of
+  Figure~\ref{fig:game-overview} shows a level being played.  A level
+  is solved when all of the boards in it are solved.  As explained
   below (``linked pipes''), actions on one board can affect another board:
   the player must solve all of them simultaneously, not one after the other
   independently.
 
-\item[Levels and worlds]
+\item[Worlds]
   A world consists of multiple levels.  A player proceeds through the
-  world, ``conquering'' each level one by one.  As shown in the world map
+  world, solving each level one by one.  As shown in the world map
   of \figref{fig:game-overview}, the levels depend on one another,
   which constrains the order in which the player may solve them.  It may
   sometimes be necessary for a player to backtrack to a previous level to
@@ -436,6 +441,7 @@ much easier experienced than textually described.)
 \hfill%
 \includegraphics[width=.49\textwidth]{images/world1-merge-and-pinch}
 \end{center}
+\vspace{10pt}
 
 \caption{
   Detail of two boards from the Pipe Jam game shown in
@@ -475,7 +481,7 @@ much easier experienced than textually described.)
   relationships among boards that the player must satisfy.
   The embedded network may come from the same level, or any level that
   does not follow the current one on the world map.  Mutually dependent
-  classes can be processed in either order.  In the worst case, a player
+  levels can be processed in either order.  In the worst case, a player
   may need to visit each one multiple times.
 
 \item[Buzzsaws:  Exceptions to the laws of physics]
@@ -489,8 +495,18 @@ much easier experienced than textually described.)
   without changing the sizes of any pipes.  However, placing a buzzsaw
   costs a large number of points, so players desire to use as few buzzsaws
   as possible.
-  \todo{I think this last sentence is the first mention of
-    points. Maybe this should be introduced earlier?}
+
+\item[Scoring]
+  A given board, level, or world may have multiple solutions.  Each
+  configuration of pipe widths earns the player a different number of
+  points.  Criteria in determining the score include
+  % , in decreasing order of importance: 
+  the number of unsolved levels in a world, unsolved boards in a level, and
+  collisions in a board; the number of buzzsaws used; and widths of pipes
+  (more points are earned for large pipes entering a board and narrow pipes
+  exiting a board).  These criteria favor solving the underlying
+  verification problem; avoiding assumptions or type loopholes in the
+  proof; and creating type annotations that favor reuse of components.
 
 \end{description}
 
@@ -521,15 +537,15 @@ much easier experienced than textually described.)
 
 
 The natural modularity of object-oriented programs, which are composed
-of classes that are composed of methods, makes our game attractive to
-casual gamers who can do a little bit of work and then later come back
+of classes that are composed of methods, enables a 
+casual gamer to do a little bit of work and then later come back
 to the game.  However, it is possible for interrelations to cross
 levels --- because of global variables that are used in multiple
 classes, or because of calls from one class to another.
 
 
 In \figref{fig:game-overview}, the player has not yet solved the
-game.  The outline color of each board and thumbnail (green or red)
+game.  The green or red outline color of each board/thumbnail
 indicates whether it is solved.  At any time, the player can animate
 the networks, making balls flow along them and seeing the result, but
 the colored borders give immediate visual feedback.  We plan to
@@ -892,10 +908,8 @@ players will be useless towards the software verification goal.
 Without significant increase of verification puzzle experts worldwide,
 we will not be able to make a quantum leap in the code quality
 compared to the status quo.  This challenge is common to all games
-that attempt to solve hard problems.  Foldit, a proteomics game,
+that attempt to solve hard problems.  Foldit~\cite{cooper10challenge,cooper11analysis}, a proteomics game,
 effectively created the genre of games that solve hard problems.
-\todo{What are good Foldit citations? The proposal never has any next
-  to the project name... how about \cite{cooper10challenge,cooper11analysis}}
 Prior to Foldit, it has not been known whether it is even possible to
 elevate human expertise on a particular domain to the point that it
 can disrupt the current scientific process and produce outcomes that
@@ -1363,7 +1377,9 @@ homepage at
 
 \section*{Acknowledgments}
  
-\todo{Mention funding?}
+This work was supported by DARPA Grant FA8750-11-2-0221.  Brian Britigan
+and Marianne Lee drew the Pipe Jam art.  We thank Drew Dean for his
+encouragement, support, and feedback.
 
 
 
